# grabit-downloader

./: .replit  IMPLEMENTATION_VERIFICATION.md  PLATFORM_SUPPORT_MATRIX.md  README.md  YOUTUBE_SUPPORT.md  config.py  main.py  pyproject.toml  replit.md
app/: __init__.py  models.py
app/routers/: __init__.py  facebook.py  instagram.py  twitter.py  youtube.py
app/services/: downloader.py
attached_assets/: Pasted-Project-Multi-Platform-Video-Downloader-API-Grabit-This-project-will-deliver-a-RESTful-backend--1753548255703_1753548255703.txt
static/: index.html
