[project]
name = "grabit-video-downloader"
version = "2.0.0"
description = "Enhanced multi-platform video downloader with intelligent format classification, visual indicators, and advanced codec detection. Features audio extraction, playlist support, and live stream detection across YouTube, Instagram, Facebook, and Twitter."
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "yt-dlp[default]>=2025.7.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/user/grabit-video-downloader"
Repository = "https://github.com/user/grabit-video-downloader.git"
Documentation = "https://github.com/user/grabit-video-downloader/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
